# vector-vision

./: README.md  main.py  pyproject.toml  req.txt
backend/: config.py  indexing.py  main.py  req.txt  retrieval.py  utils.py
frontend/: app.py
